chore: Remove old files and rename